Revision history for Perl module CPAN::Mini::Webserver:

0.41
     - drop the header font size a little
     - refactored out a bunch of methods, turned into calls to 
       direct_to_template (patch by markf)
     - quote any arguments passed to tar, thus not allowing peeps
       to 0wn3rz our box (patch by markf)
     - remove useless commented out code (patch by markf)
     - correct out of date comment (patch by markf)
     - refactored the skipping into the WebserverTester, avoided 
       starting the webserver twice in simple.t, made simple.t
       ascii not utf8 (patch by markf)
     - view anything.PL as raw. This is because we want Makefile.PL
       and Build.PL marked up as perl, not viewed as pod (patch
       by markf)
     - unbreak bonjour publishing (patch by miyagawa)

0.40 Fri Aug 22 09:24:54 BST 2008
     - improve the test suite (patch by markf)
     - detect installed modules properly (patch by rjbs)
     - index CamelCase distributions and modules so that you can
       search for both "camel", "case" and "camelcase"
     - use PAUSE names if 00whois.xml is mirrored (patch by martijn)
     - add info like email/homepage and some links to other 
       cpan-related pages for the author (patch by martijn)
     - make an empty search give "No results found", rather than
       an error (noticed by corion)
     - make the webserver work as a local CPAN mirror so that you can
       point CPAN or CPANPLUS at it (idea by markf)
     - refactor downloading distributions to use the CPAN codepath

0.39 Tue Aug 19 08:27:37 BST 2008
     - make a single key from the license text and the license url
       from resources instead of displaying both seperately (patch
       by martijn)
     - sort dependencies
     - narrow down the search results based on educated guesses based
       on the search query (patch by martijn)
     - use Archive::Tar if installed, otherwise external tar 
       (patch by corion)