@@ -9,6 +9,7 @@ WriteMakefile(
     LICENSE      => 'perl',
     PREREQ_PM    => {
         'App::Cache'               => '0',
+        'Archive::Peek'            => '0.33',
         'CGI'                      => '3.16',
         'CPAN::Mini'               => '0.565',
         'File::Type'               => '0',
@@ -29,10 +30,8 @@ WriteMakefile(
         'PPI::HTML'                => '0',
         'Search::QueryParser'      => '0',
         'String::CamelCase'        => '0',
-        'String::ShellQuote'       => '0',
         'Template::Declare'        => '0.29',
         'Test::More'               => '0',
-
     },
     'EXE_FILES' => ['bin/minicpan_webserver'],
 );
